docs/0.15/_sources/api/gammapy.spectrum.SpectrumDataset.rst.txt
SpectrumDataset
===============

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDataset.data_shape
      ~SpectrumDataset.energy_range
      ~SpectrumDataset.excess
      ~SpectrumDataset.likelihood_type
      ~SpectrumDataset.mask
      ~SpectrumDataset.mask_safe
      ~SpectrumDataset.models
      ~SpectrumDataset.parameters
      ~SpectrumDataset.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDataset.copy
      ~SpectrumDataset.create
      ~SpectrumDataset.fake
      ~SpectrumDataset.npred
      ~SpectrumDataset.plot_counts
      ~SpectrumDataset.plot_fit
      ~SpectrumDataset.plot_residuals
      ~SpectrumDataset.residuals
      ~SpectrumDataset.stack
      ~SpectrumDataset.stat_array
      ~SpectrumDataset.stat_sum

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: excess
   .. autoattribute:: likelihood_type
   .. autoattribute:: mask
   .. autoattribute:: mask_safe
   .. autoattribute:: models
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: fake
   .. automethod:: npred
   .. automethod:: plot_counts
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
